[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdownloader"
version = "0.0.1"
authors = [
  { name="Elimelech Schreiber", email="lemelech.bi@gmail.com" },
]
description = "A yoututbe downloader"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lemelech/ytdownloader"
"Bug Tracker" = "https://github.com/lemelech/ytdownloader/issues"