[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdownloader"
version = "0.0.1"
authors = [
  { name="Elimelech Schreiber", email="lemelech.bi@gmail.com" },
]
description = "A yoututbe downloader"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip==1.8.2",
    "pytube @ git+https://github.com/pytube/pytube",
    "pytube3==9.6.4",
    "typing_extensions==4.4.0",

[project.scripts]
yt2mp3 = "ytdownloader:ytdownloader.main"

[project.urls]
"Homepage" = "https://github.com/lemelech/ytdownloader"
"Bug Tracker" = "https://github.com/lemelech/ytdownloader/issues"